--- a/views/all_flowers.hbs
+++ b/views/all_flowers.hbs
@@ -1,8 +1,37 @@
-<h1>Flowers</h1>
+{{#if color_filter}}
+    <h1>Flowers ({{color_filter}})</h1>
+{{else}}
+    <h1>Flowers</h1>
+{{/if}}
+
+<form action="/" method="get">
+    <select name="color_filter">
+        {{#each colors}}
+            <option value="{{this}}">{{this}}</option>
+        {{/each}}
+    </select>
+    <button type="submit">Choose Color</button>
+</form>
+
 
 <ul>
-    <!-- #each loops over flowers [Array] -->
     {{#each flowers}}
-        <li>{{this.name}} is {{this.color}}</li>
+        <li>
+            <a href="/details/{{this.name}}">{{this.name}}</a>
+        </li>
     {{/each}}
 </ul>
+
+
+{{#if color_filter}}
+    <a href="/">Clear selection</a>
+{{/if}}
+
+<h2>Add New Flower</h2>
+<form action="/addFlower" method="POST">
+    Name <input type="text" name="name" placeholder="Name" required><br>
+    Color <input type="text" name="color" placeholder="Color" required><br>
+    Wikipedia Page <input type="text" name="wiki" placeholder="Wikipedia Page"><br>
+    <button type="submit">Save</button>
+</form>
+
