added styles and base layout, end of ppt-slides

--- a/views/flower_details.hbs
+++ b/views/flower_details.hbs
@@ -6,6 +6,12 @@
     <P>Sorry, no image for {{flower.name}}</P>
 {{/if}}
 
-<p>{{flower.name}} is {{flower.color}}</p>
+<p><span id="name">{{flower.name}}</span> is
+    <span id="editableColor">{{flower.color}}</span>
+    <span id="instructions"> (click color to edit)</span></p>
 
-<P>Visit this flower's page at Wikipedia at the following link: <a href="{{flower.wiki}}">{{flower.wiki}}</a></P>
+<p>Visit this flower's page at Wikipedia at the following link: <a href="{{flower.wiki}}">{{flower.wiki}}</a></p>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
+</script>
+<script src="/javascripts/updatecolor.js"></script>
