--- a/views/flower_details.hbs
+++ b/views/flower_details.hbs
@@ -12,6 +12,7 @@
 
 <p>Visit this flower's page at Wikipedia at the following link: <a href="{{flower.wiki}}">{{flower.wiki}}</a></p>
 
+<button id="delete_flower">delete</button>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">
 </script>
 <script src="/javascripts/updatecolor.js"></script>
